# ci-test

./: .gitignore  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_version.py
tests/src/: test_sample.py
