[tool.poetry]
name = "ci-test"
version = "0.1.0"
description = ""
authors = ["hachimada <60519909+hachimada@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
